// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customers resource makes create requests 1`] = `
[
  [
    "https://api.made.up.host:1337/customers/",
    {
      "body": "{"contact_info":{"address_line_2":"Apt. 4F","address_line_1":"1600 Pennsylvania Avenue NW","zipcode":"20500","city":"Washington","state":"DC"},"name":"chuck_testa","display_name":"Chuck Testa"}",
      "credentials": undefined,
      "headers": {
        "Authorization": "Bearer 867-5309",
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`Customers resource makes delete requests 1`] = `
[
  [
    "https://api.made.up.host:1337/customers/chuck_testa",
    {
      "body": undefined,
      "credentials": undefined,
      "headers": {
        "Authorization": "Bearer 867-5309",
      },
      "method": "DELETE",
    },
  ],
]
`;

exports[`Customers resource makes list requests 1`] = `
[
  [
    "https://api.made.up.host:1337/customers/",
    {
      "body": undefined,
      "credentials": undefined,
      "headers": {
        "Authorization": "Bearer 867-5309",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`Customers resource makes retrieve requests 1`] = `
[
  [
    "https://api.made.up.host:1337/customers/chuck_testa",
    {
      "body": undefined,
      "credentials": undefined,
      "headers": {
        "Authorization": "Bearer 867-5309",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`Customers resource makes update requests 1`] = `
[
  [
    "https://api.made.up.host:1337/customers/chuck_testa",
    {
      "body": "{"contact_info":{"address_line_2":"Apt. 4F","address_line_1":"1600 Pennsylvania Avenue NW","zipcode":"20500","city":"Washington","state":"DC"},"name":"chuck_testa","display_name":"Chuck Testa"}",
      "credentials": undefined,
      "headers": {
        "Authorization": "Bearer 867-5309",
        "Content-Type": "application/json",
      },
      "method": "PUT",
    },
  ],
]
`;
